--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,28 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.7
+aiosignal==1.3.2
+astroid==3.3.10
+attrs==25.3.0
+black==25.1.0
+click==8.2.1
+dill==0.4.0
 discord.py==2.5.2
 dotenv==0.9.9
+frozenlist==1.6.0
+idna==3.10
+isort==6.0.1
+mccabe==0.7.0
+multidict==6.4.4
+mypy==1.16.0
+mypy_extensions==1.1.0
+packaging==25.0
+pathspec==0.12.1
+platformdirs==4.3.8
+propcache==0.3.1
+pylint==3.3.7
+python-dotenv==1.1.0
+tomlkit==0.13.2
+types-requests==2.32.0.20250602
+typing_extensions==4.14.0
+urllib3==2.4.0
+yarl==1.20.0
